--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 </div>
 <!-- About Us End -->
 <!-- Our Products Section Start -->
-<div class="our-products" style="margin-top: 20px;">
+<div class="our-team" style="margin-top: 20px;">
     <div class="container">
         <div class="row section-row align-items-center">
             <div class="col-lg-6">
@@ -371,7 +371,7 @@
                     <div class="team-image">
                         <a href="#" data-cursor-text="View">
                             <figure class="image-anime">
-                                <img src="images/products/1.png" alt="Precision Components">
+                                <img src="images/products/1.png" alt="">
                             </figure>
                         </a>
                     </div>
@@ -379,7 +379,7 @@
 
                     <!-- Product Content Start -->
                     <div class="team-content">
-                        <h3><a href="#"></a></h3>
+                        <h3><a href="#">Product 1</a></h3>
                         <p></p>
                     </div>
                     <!-- Product Content End -->
@@ -393,13 +393,13 @@
                     <div class="team-image">
                         <a href="#" data-cursor-text="View">
                             <figure class="image-anime">
-                                <img src="images/products/2.png" alt="Industrial Valves">
+                                <img src="images/products/2.png" alt="">
                             </figure>
                         </a>
                     </div>
 
                     <div class="team-content">
-                        <h3><a href="#"></a></h3>
+                        <h3><a href="#">Product 2</a></h3>
                         <p></p>
                     </div>
                 </div>
@@ -412,13 +412,13 @@
                     <div class="team-image">
                         <a href="#" data-cursor-text="View">
                             <figure class="image-anime">
-                                <img src="images/products/3.png" alt="Custom Fabrication">
+                                <img src="images/products/3.png" alt="">
                             </figure>
                         </a>
                     </div>
 
                     <div class="team-content">
-                        <h3><a href="#"></a></h3>
+                        <h3><a href="#">Product 3</a></h3>
                         <p></p>
                     </div>
                 </div>
@@ -431,13 +431,13 @@
                     <div class="team-image">
                         <a href="#" data-cursor-text="View">
                             <figure class="image-anime">
-                                <img src="images/products/4.png" alt="Machinery Parts">
+                                <img src="images/products/4.png" alt="">
                             </figure>
                         </a>
                     </div>
 
                     <div class="team-content">
-                        <h3><a href="#"></a></h3>
+                        <h3><a href="#">Product 4</a></h3>
                         <p></p>
                     </div>
                 </div>
@@ -1364,7 +1364,8 @@
                 <div class="about-footer">
                     <!-- Footer Logo Start -->
                     <div class="footer-logo">
-                        <img src="images/footer-logo.svg" alt="Vinnu Engineering Works Logo">
+                     <!--   <img src="images/footer-logo.svg" alt="Vinnu Engineering Works Logo"> -->
+                        <h3>Vinnu Engineering Works</h3>
                     </div>
                     <!-- Footer Logo End -->
 
