--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                 <div class="hero-content">
                                     <!-- Section Title Start -->
                                     <div class="section-title dark-section">
-                                        <h3 class="wow fadeInUp">Established in 2000 · Bangalore, India</h3>
+                                        <h3 class="wow fadeInUp">Established in 2000. Bengaluru</h3>
                                         <h1 class="text-anime-style-2" data-cursor="-opaque">Built on <span>Quality, Trust & Timely Delivery</span></h1>
                                         <p class="wow fadeInUp" data-wow-delay="0.25s">Vinnu Engineering Works combines cutting-edge technology with expert craftsmanship to meet global standards and client expectations.</p>
                                     </div>
