--- a/index.html
+++ b/index.html
@@ -1335,6 +1335,130 @@
 </div>
 <!-- Our Faqs Section End -->
 
+<!-- Page Contact Us Start -->
+<div class="page-contact-us">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-5">
+                <!-- Contact Information Start -->
+                <div class="contact-information">
+                    <!-- Section Title Start -->
+                    <div class="section-title">
+                        <h3 class="wow fadeInUp">contact us</h3>
+                        <h2 class="text-anime-style-3" data-cursor="-opaque">Get in touch <span>with us</span></h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">
+                            Whether you need precision machined components or industrial valves, we’re ready to collaborate and deliver.
+                        </p>
+                    </div>
+                    <!-- Section Title End -->
+
+                    <!-- Contact Info Box Start -->
+                    <div class="contact-info-box">
+                        <!-- Phone -->
+                        <div class="contact-info-item wow fadeInUp">
+                            <div class="icon-box">
+                                <img src="images/icon-phone.svg" alt="">
+                            </div>
+                            <div class="contact-info-content">
+                                <h3>Phone</h3>
+                                <p>+91 81239 47059<br>+91 81235 66170</p>
+                            </div>
+                        </div>
+
+                        <!-- Email -->
+                        <div class="contact-info-item wow fadeInUp" data-wow-delay="0.25s">
+                            <div class="icon-box">
+                                <img src="images/icon-mail.svg" alt="">
+                            </div>
+                            <div class="contact-info-content">
+                                <h3>Email</h3>
+                                <p>vinnuengineering@gmail.com</p>
+                            </div>
+                        </div>
+
+                        <!-- Address -->
+                        <div class="contact-info-item wow fadeInUp" data-wow-delay="0.5s">
+                            <div class="icon-box">
+                                <img src="images/icon-location.svg" alt="">
+                            </div>
+                            <div class="contact-info-content">
+                                <h3> Address</h3>
+                                <p>No. 401-402 a/2, 11th Cross, 4th Phase, Peenya Industrial Area (Near Brundavana Bus Stop) Bengaluru -560 058</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Contact Information End -->
+            </div>
+
+            <div class="col-lg-7">
+                <!-- Page Contact Form Start -->
+                <div class="contact-us-form">
+                    <div class="section-title">
+                        <h2 class="text-anime-style-2" data-cursor="-opaque">Contact <span>Us</span></h2>
+                    </div>
+
+                    <div class="contact-form">
+                        <!-- Contact Form Start -->
+                        <form id="contactForm" action="#" method="POST" data-toggle="validator" class="wow fadeInUp" data-wow-delay="0.5s">
+                            <div class="row">
+                                <div class="form-group col-md-6 mb-4">
+                                    <input type="text" name="fname" class="form-control" id="fname" placeholder="Enter first name" required>
+                                </div>
+
+                                <div class="form-group col-md-6 mb-4">
+                                    <input type="text" name="lname" class="form-control" id="lname" placeholder="Enter last name" required>
+                                </div>
+
+                                <div class="form-group col-md-12 mb-4">
+                                    <input type="email" name="email" class="form-control" id="email" placeholder="Enter your e-mail" required>
+                                </div>
+
+                                <div class="form-group col-md-12 mb-4">
+                                    <input type="text" name="phone" class="form-control" id="phone" placeholder="Enter your phone no." required>
+                                </div>
+
+                                <div class="form-group col-md-12 mb-5">
+                                    <textarea name="message" class="form-control" id="message" rows="4" placeholder="Write your message"></textarea>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <button type="submit" class="btn-default"><span>submit message</span></button>
+                                    <div id="msgSubmit" class="h3 hidden"></div>
+                                </div>
+                            </div>
+                        </form>
+                        <!-- Contact Form End -->
+                    </div>
+                </div>
+                <!-- Page Contact Form End -->
+            </div> 
+        </div>
+    </div>
+</div>
+<!-- Page Contact Us End -->
+
+<!-- Google Map Start -->
+<div class="google-map">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="google-map-iframe">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.0480403137463!2d77.63085827497328!3d12.887330216136269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1458161d1a0b%3A0xc9570c609a0e7e98!2sSiddareddy%20Layout%2C%20Singasandra%2C%20Bengaluru%2C%20Karnataka%20560068!5e0!3m2!1sen!2sin!4v1718525563947!5m2!1sen!2sin" 
+                        width="100%" 
+                        height="450" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Google Map End -->
 
   <!-- Footer Start -->
 <footer class="main-footer">
@@ -1410,7 +1534,7 @@
                         <li><a href="tel:+918123947059">+91 81239 47059</a></li>
                         <li><a href="tel:+918123566170">+91 81235 66170</a></li>
                         <li><a href="mailto:vinnuengineering@gmail.com">vinnuengineering@gmail.com</a></li>
-                        <li>8400 sq.ft facility, 200 HP<br>Bangalore, Karnataka</li>
+                        <li>No. 401-402 a/2, 11th Cross, 4th Phase, Peenya Industrial Area (Near Brundavana Bus Stop) Bengaluru -560 058</li>
                         <li>GSTIN: 29AVJPS6147G1Z1</li>
                     </ul>
                 </div>
