--- a/index.html
+++ b/index.html
@@ -1444,15 +1444,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="google-map-iframe">
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.0480403137463!2d77.63085827497328!3d12.887330216136269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1458161d1a0b%3A0xc9570c609a0e7e98!2sSiddareddy%20Layout%2C%20Singasandra%2C%20Bengaluru%2C%20Karnataka%20560068!5e0!3m2!1sen!2sin!4v1718525563947!5m2!1sen!2sin" 
-                        width="100%" 
-                        height="450" 
-                        style="border:0;" 
-                        allowfullscreen="" 
-                        loading="lazy" 
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d124437.06641738006!2d77.41111045305753!3d12.929668075702896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sNo.%20401-402%20a%2F2%2C%2011th%20Cross%2C%204th%20Phase%2C%20Peenya%20Industrial%20Area%20(Near%20Brundavana%20Bus%20Stop)%20Bengaluru%20-560%20058!5e0!3m2!1sen!2sin!4v1750161033648!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
