--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<!-- Page Title -->
     <title>Vinnu Engineering Works</title>
 	<!-- Favicon Icon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/favicon_io/site.webmanifest">
-    <link rel="icon" type="image/png" href="/assets/images/favicon_io/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/images/favicon_io/site.webmanifest">
+    <link rel="icon" type="image/png" href="/images/favicon_io/favicon.ico">
 	<!-- Google Fonts Css-->
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
