--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
 <!-- Page Contact Us End -->
 
 <!-- Google Map Start -->
-<div class="google-map">
+<div class="google-map" style="margin-bottom: 10px;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
