--- a/index.html
+++ b/index.html
@@ -341,112 +341,284 @@
     </div>
 </div>
 <!-- About Us End -->
-<!-- Our Products Section Start -->
-<div class="our-team" style="margin-top: 20px;">
+<!-- Custom Products Section Start -->
+<div class="custom-products">
     <div class="container">
-        <div class="row section-row align-items-center">
+        <div class="row custom-section-header align-items-center mb-5">
             <div class="col-lg-6">
-                <!-- Section Title Start -->
-                <div class="section-title">
-                    <h3 class="wow fadeInUp">our products</h3>
-                    <h2 class="text-anime-style-2" data-cursor="-opaque">Engineered for <span>performance and precision</span></h2>
+                <div class="custom-title">
+                    <h3 class="fade-in">Our Products</h3>
+                    <h2 class="headline-animated" data-cursor="-opaque">Engineered for <span>performance and precision</span></h2>
                 </div>
-                <!-- Section Title End -->
             </div>
-
-            <div class="col-lg-6">
-                <!-- Section Button Start -->
-                <div class="section-btn wow fadeInUp" data-wow-delay="0.25s">
-                    <a href="#" class="btn-default"><span>view all products</span></a>
+            <div class="col-lg-6 text-lg-end text-start">
+                <div class="custom-btn-wrapper fade-in" data-wow-delay="0.25s">
+                    <a href="#" class="custom-btn"><span>View All Products</span></a>
                 </div>
-                <!-- Section Button End -->
             </div>
         </div>
 
         <div class="row">
-            <div class="col-lg-3 col-md-6">
-                <!-- Product Item Start -->
-                <div class="team-member-item wow fadeInUp">
-                    <!-- Product Image Start -->
-                    <div class="team-image">
+            <!-- Product Items -->
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
                         <a href="#" data-cursor-text="View">
-                            <figure class="image-anime">
-                                <img src="images/products/1.png" alt="">
+                            <figure class="img-hover">
+                                <img src="images/products/1.png" alt="Adapter Chaft">
                             </figure>
                         </a>
                     </div>
-                    <!-- Product Image End -->
-
-                    <!-- Product Content Start -->
-                    <div class="team-content">
-                        <h3><a href="#">Product 1</a></h3>
-                        <p></p>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Steering Knuckle</a></h4>
+                        <p>Enables accurate pivoting and suspension control in heavy-duty machinery.</p>
                     </div>
-                    <!-- Product Content End -->
                 </div>
-                <!-- Product Item End -->
             </div>
 
-            <div class="col-lg-3 col-md-6">
-                <!-- Product Item Start -->
-                <div class="team-member-item wow fadeInUp" data-wow-delay="0.25s">
-                    <div class="team-image">
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
                         <a href="#" data-cursor-text="View">
-                            <figure class="image-anime">
-                                <img src="images/products/2.png" alt="">
+                            <figure class="img-hover">
+                                <img src="images/products/2.png" alt="Piston">
                             </figure>
                         </a>
                     </div>
-
-                    <div class="team-content">
-                        <h3><a href="#">Product 2</a></h3>
-                        <p></p>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Steering Knuckle</a></h4>
+                        <p>Robust construction ensures enhanced durability under high-stress conditions.</p>
                     </div>
                 </div>
-                <!-- Product Item End -->
             </div>
 
-            <div class="col-lg-3 col-md-6">
-                <!-- Product Item Start -->
-                <div class="team-member-item wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="team-image">
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
                         <a href="#" data-cursor-text="View">
-                            <figure class="image-anime">
-                                <img src="images/products/3.png" alt="">
+                            <figure class="img-hover">
+                                <img src="images/products/3.png" alt="End Cap">
                             </figure>
                         </a>
                     </div>
-
-                    <div class="team-content">
-                        <h3><a href="#">Product 3</a></h3>
-                        <p></p>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Crankshaft Rear Oil <br> Seal Housing</a></h4>
+                        <p>Engineered to prevent leaks and support high-speed rotational components.</p>
                     </div>
                 </div>
-                <!-- Product Item End -->
             </div>
 
-            <div class="col-lg-3 col-md-6">
-                <!-- Product Item Start -->
-                <div class="team-member-item wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="team-image">
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
                         <a href="#" data-cursor-text="View">
-                            <figure class="image-anime">
-                                <img src="images/products/4.png" alt="">
+                            <figure class="img-hover">
+                                <img src="images/products/Gland flange.png" alt="Gland Flange">
                             </figure>
                         </a>
                     </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Gland Flange</a></h4>
+                        <p>Designed to ensure secure sealing in pressurized valve assemblies.</p>
+                    </div>
+                </div>
+            </div>
 
-                    <div class="team-content">
-                        <h3><a href="#">Product 4</a></h3>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/4.png" alt="Spacer">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Product</a></h4>
                         <p></p>
                     </div>
                 </div>
-                <!-- Product Item End -->
             </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/8.png" alt="Indicator">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">digital height gauge</a></h4>
+                        <p>Provides precise vertical measurements for machining and inspection.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/6.png" alt="Yoke">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Product</a></h4>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+
+        
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/9.png" alt="Product 1">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Product </a></h4>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/10.png" alt="Product 2">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Nuts</a></h4>
+                        <p>Threaded to exact specifications for secure and vibration-resistant fastening.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/7.png" alt="Product 3">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Pressure Regulator Plunger. </a></h4>
+                        <p>Controls fluid flow and pressure stability in hydraulic equipment.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/5.png" alt="Product 4">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Spacer</a></h4>
+                        <p>Maintains structural accuracy and clearance in assembled parts.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/12.png" alt="Product 4">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Gasket</a></h4>
+                        <p>Prevents leaks and ensures airtight sealing between flanges or joints.</p>
+                    </div>
+                </div>
+            </div>
+           <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/13.png" alt="Product 4">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Metal Disc</a></h4>
+                        <p>Precision-cut for use in rotary or sealing applications.</p>
+                    </div>
+                </div>
+            </div>
+
+             <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/11.png" alt="Product 4">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">lever</a></h4>
+                        <p>Facilitates controlled motion and force distribution in mechanical linkages.</p>
+                    </div>
+                </div>
+            </div>
+
+              <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/14.png" alt="Product 4">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#"> Swivel Adapter</a></h4>
+                        <p>Allows rotational flexibility and directional alignment in pipeline systems</p>
+                    </div>
+                </div>
+            </div>
+
+             <div class="col-lg-3 col-md-6 mb-4">
+                <div class="custom-product-card fade-in">
+                    <div class="custom-product-img">
+                        <a href="#" data-cursor-text="View">
+                            <figure class="img-hover">
+                                <img src="images/products/15.png" alt="Product 4">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="custom-product-info">
+                        <h4><a href="#">Product</a></h4>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
-<!-- Our Products Section End -->
+<!-- Custom Products Section End -->
 
    <!-- Our Service Start -->
 <div class="our-services parallaxie" style="margin-top: 20px;">
