--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Pressure Regulator Plunger. </a></h4>
+                        <h4><a href="#">Pressure Regulator Plunger</a></h4>
                     </div>
                 </div>
             </div>
