--- a/index.html
+++ b/index.html
@@ -372,6 +372,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Steering Knuckle</a></h4>
                     </div>
+                      <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -387,6 +390,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Steering Knuckle</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -402,6 +408,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Crankshaft Rear Oil <br> Seal Housing</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -417,6 +426,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Gland Flange</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -432,6 +444,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Product</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -447,6 +462,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">digital height gauge</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -462,6 +480,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Product</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -478,6 +499,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Product </a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -493,6 +517,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Nuts</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -508,6 +535,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Pressure Regulator Plunger</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -523,6 +553,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Spacer</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
@@ -537,6 +570,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Gasket</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
            <div class="col-lg-3 col-md-6 mb-4">
@@ -551,6 +587,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Metal Disc</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -566,6 +605,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">lever</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -581,6 +623,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#"> Swivel Adapter</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
@@ -596,6 +641,9 @@
                     <div class="custom-product-info">
                         <h4><a href="#">Product</a></h4>
                     </div>
+                     <div class="hero-btn wow " data-wow-delay="0.4s">
+                        <a href="#" class="btn-default"><span>See More</span></a>
+                      </div>
                 </div>
             </div>
 
