--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
 <!-- Custom Products Section End -->
 
    <!-- Our Service Start -->
-<div class="our-services parallaxie" style="margin-top: 20px;">
+<div class="our-services parallaxie" >
     <div class="container">
         <div class="row section-row align-items-center">
             <div class="col-lg-6">
